Change Log

D4.12.3 20180209 SCL
- display HIGH TEMP and turn LCD red during over temp event and keep display that way until button press or EV disconnected. No change to display during overtemp panic, which causes hard fault 
	
D4.12.2 20180206 SCL
- revamp time limit code to base on seconds instead of millis(). time limit
	fix in D4.12.1 was completely wrong. in existing code time limit was
	getting reset every time entering sleep state
	
D4.12.1 20180206 SCL
BUGGY DO NOT USE
- time limit - used to be total length of charge session
	-> now, setting *extends* total charge session time
- charge limit - used to be total kWh of charge session
	-> now, setting *extends* total charge session kWh
	
D4.12.0 20180206 SCL
- restructure skip limits code
- don't allow RAPI to set charge/time limits when not allowed ($SH/$S3)
	-> return $NK if not allowed
- add new clock icon for time limit
- delaytimer changes/fixes:
 fixes problems when delay timer enabled:
   a) press sleep button during timer charging session -> would not stay sleeping.. wakes up again instantly
   -> fixed: stays sleeping w/ timer temporarily disabled until end of timer awake interval or EV disconnected.. then timer re-enabled automatically
   b) wake up EVSE between timer sessions, set time or charge limit -> EVSE goes into READY state after EV disconnected
   -> fixed.. stays sleeping with timer enabled after EV disconnected
   c) timer is near end of charging session window.. plug in car, set time or charge limit which requires EV to charge beyond timer's charging session -> timer can kick in and stop charging even though charge/time limit not met
   -> fixed.. EVSE wont' stop charging until charge/time limit met. timer temporarily disabled until limit met or EV is unplugged
 code changes:
	1) don't save EVSE settings when enable/disable (why were we doing that???) - to save life of EEPROM
	2) don't save EVSE settings when setting start/end time (why were we doing that???) - to save life of EEPROM